--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://DoHoanThien.github.io/movie-project/",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -11,6 +12,7 @@
     "antd": "^4.18.5",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
+    "gh-pages": "^3.2.3",
     "history": "^4.10.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -30,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
