--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://DoHoanThien.github.io/movie-project",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -13,7 +13,6 @@
     "axios": "^0.25.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
-    "gh-pages": "^3.2.3",
     "history": "^4.10.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -31,9 +30,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "env-cmd -f .env react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18"
   }
