--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://DoHoanThien.github.io/movie-project",
+  "homepage": "https://DoHoanThien.github.io",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.2",
