--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-project",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://DoHoanThien.github.io/movie-project",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -32,9 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -56,7 +53,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
-    "gh-pages": "^3.2.3",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18"
   }
