--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-project",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.2",
